# infobright-4.0.7

./: Makefile  README
src/: ChangeLog  Makefile.in  configure.ac
src/chmt/: CHMTParameters.cpp  CHMTParameters.h  CharsetMigrationTool.cpp  CharsetMigrationTool.h  main.cpp
src/config/: m4_ax_boost_base.m4  m4_ax_boost_filesystem.m4  m4_ax_boost_regex.m4  m4_ax_boost_system.m4  m4_ax_boost_thread.m4
src/downgrader/: ensure.h  main.cpp  migrate_2_3.cpp  migrator.h  options.cpp  options.h  setup.cpp  setup.h  trycatch.cpp  trycatch.h  utils.cpp  utils.h
src/ib/: CMakeLists.txt  ib.kdev4
src/icm/: DIMMethod.cpp  DIMMethod.h  DIMParameters.cpp  DIMParameters.h  DataIntegrityManager.cpp  DataIntegrityManager.h  DataIntegrityTest.cpp  DataIntegrityTest.h  KNRebuild.cpp  KNRebuild.h  TableTest.cpp  TableTest.h  TestOfDeleteMaskConsistency.cpp  TestOfDeleteMaskConsistency.h  TestOfDeleteMaskVsDPN.cpp  TestOfDeleteMaskVsDPN.h  TestOfKNsConsistencyLight.cpp  TestOfKNsConsistencyLight.h  TestOfLookups.cpp  TestOfLookups.h  TestOfMaxLookupVsDPN.cpp  TestOfMaxLookupVsDPN.h  TestOfNoObjFirstColumnVsDelMask.cpp  TestOfNoObjFirstColumnVsDelMask.h  TestOfNoObjInColumnsEquality.cpp  TestOfNoObjInColumnsEquality.h  TestOfPackFileOverlapping.cpp  TestOfPackFileOverlapping.h  TestOfTableFilesConsistency.cpp  TestOfTableFilesConsistency.h  main.cpp
src/storage/brighthouse/common/: CommonDefinitions.h  bhassert.h
src/storage/brighthouse/compress/: BasicDataFilt.h  DataFilt.h  Dictionary.cpp  Dictionary.h  IncWGraph.cpp  NumCompressor.h  PartDict.cpp  PartDict.h  TopBitDict.cpp  tools.h
src/storage/brighthouse/system/: IBConfigurationMan.cpp  fet.h
src/storage/brighthouse/win/: CMakeLists.txt  WinBuild.txt
